Movie_Rating_Portal/ea-imdb-k8s-file/comment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-module
  labels:
    app: comment-module
  replicas: 1
  selector:
    matchLabels:
      app: comment-module
  template:
    metadata:
      labels:
        app: comment-module
    spec:
      containers:
      - name: comment-module
        image: sourav40/comment-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
