Movie_Rating_Portal/ea-imdb-k8s-file/movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-module
  labels:
    app: movie-module
  replicas: 1
  selector:
    matchLabels:
      app: movie-module
  template:
    metadata:
      labels:
        app: movie-module
    spec:
      containers:
      - name: movie-module
        image: sarozme/movie-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
