Movie_Rating_Portal/ea-imdb-k8s-file/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
          app: mysqldb
    spec:
        containers:
        - name: mysqldb
          image: mysql
          ports:
          - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-service
spec:
  selector:
    app: mysqldb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
