Movie_Rating_Portal/ea-imdb-k8s-file/tv-series-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tv-series-module
  labels:
    app: tv-series-module
  replicas: 1
  selector:
    matchLabels:
      app: tv-series-module
  template:
    metadata:
      labels:
        app: tv-series-module
    spec:
      containers:
      - name: tv-series-module
        image: crisnaxtha/tv-series-service
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tv-series-service
spec:
  selector:
    app: tv-series-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
