Movie_Rating_Portal/ea-imdb-k8s-file/user-service-delopyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-module
  labels:
    app: user-module
  replicas: 1
  selector:
    matchLabels:
      app: user-module
  template:
    metadata:
      labels:
        app: user-module
    spec:
      containers:
      - name: user-module
        image: sourav40/user-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
